# second-brain

./: .env.example  .gitignore  app.py  assistant.py  db.py  main.py  prefs.py  pyproject.toml  server.py  tasks.py  tools.py
.playwright-mcp/: page-2026-06-21T09-47-55-745Z.yml  page-2026-06-21T09-48-13-221Z.yml  page-2026-06-21T09-51-09-943Z.yml  page-2026-06-21T09-51-51-129Z.yml
docs/modules/tasks/features/2026-07-05-task-manager/: spec.md
static/: app.js  index.html  style.css
tests/: test_app.py  test_db.py  test_prefs.py  test_tasks.py  test_tools.py
