[project]
name = "second-brain"
version = "0.1.0"
description = "Second Brain — a personal AI memory for notes, events, and finances"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.19.0",
    "openai-agents>=0.17.6",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
